Add meta tags for SEO, implement microrayon happiness logic, and include Open Graph and Twitter card metadata. Introduced a new OG image for social sharing.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>Caspian Atom - The Aktau Protocol</title>
+    <meta name="title" content="Caspian Atom - The Aktau Protocol" />
+    <meta name="description" content="A Soviet-era city builder where you manage a nuclear-powered desalination city in the Kazakhstan desert. Balance water, power, and survival in this browser-based strategy game." />
+    <meta name="keywords" content="city builder, strategy game, browser game, Soviet, nuclear, desalination, Aktau, Kazakhstan, survival game, management sim" />
+    <meta name="author" content="eone" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://aktau.eone.work/" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#2F8D8D" />
+    <meta name="msapplication-TileColor" content="#2F8D8D" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://aktau.eone.work/" />
+    <meta property="og:title" content="Caspian Atom - The Aktau Protocol" />
+    <meta property="og:description" content="A Soviet-era city builder where you manage a nuclear-powered desalination city in the Kazakhstan desert. Balance water, power, and survival." />
+    <meta property="og:image" content="https://aktau.eone.work/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Caspian Atom" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://aktau.eone.work/" />
+    <meta name="twitter:title" content="Caspian Atom - The Aktau Protocol" />
+    <meta name="twitter:description" content="A Soviet-era city builder where you manage a nuclear-powered desalination city in the Kazakhstan desert. Balance water, power, and survival." />
+    <meta name="twitter:image" content="https://aktau.eone.work/og-image.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=VT323&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    <title>Caspian Atom - The Aktau Protocol</title>
   </head>
   <body>
     <canvas id="gameCanvas"></canvas>
